--- a/_config.yml
+++ b/_config.yml
@@ -7,33 +7,31 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: abintom                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Articles, news, tips and tricks about Swift development   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  A weekly blog about Swift, iOS and Xcode Tips and Tricks
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://abintom.github.io'
 
-author: your_full_name                  # change to your full name
+author: Abin Tom                  # change to your full name
 
 github:
-  username: github_username             # change to your github username
+  username: abintom             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: abintomofficial            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: Abin Tom                  # it will shows as the copyright owner in Footer
+  email: mailabintom@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/abintomofficial      # change to your twitter homepage
+    - https://github.com/abintom       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -47,7 +45,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Australia/Melbourne
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
@@ -87,7 +85,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: /assets/img/about/avatar.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
