--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ twitter:
   username: abintomofficial            # change to your twitter username
 
 social:
-  name: Abin Tom                  # it will shows as the copyright owner in Footer
+  name: tensorloop                  # it will shows as the copyright owner in Footer
   email: mailabintom@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
