--- a/_data/meta.yml
+++ b/_data/meta.yml
@@ -1,3 +1,3 @@
-name: Chirpy
+name: abintom
 version: 2.7.2
-homepage: https://github.com/cotes2020/jekyll-theme-chirpy/
+homepage: https://abintom.github.io
