Update copyright url

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ social:
   email: mailabintom@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/abintomofficial      # change to your twitter homepage
+    - https://tensorloop.com      # change to your twitter homepage
     - https://github.com/abintom       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
